Release Notes

* 3/14/2017
  * removed SE check in Adder

* 2/16/2017
  * added getProxy
  * changed killTask.py not to kill holding by default

* 2/10/2017
  * added DBProxyFiltered

* 2/6/2017
  * Protection against undef

* 2/3/2017
  * using schedconfig.dn to specify pilot owners

* 2/2/2017
  * added columns for new memory monitor

* 1/30/2017
  * fixed EiOra for empty streamName
  * fixed updateEventRanges

* 1/27/2017
  * removed dq2 dependency

* 1/23/2017
  * added CAP_RUNNING_USER_JOBS

* 1/11/2017
  * fixed fingers for RFC proxy

* 12/15/2016
  * added mergeEsOnOS
  * using new filename format for ES merge for rel20 or higher

* 12/2/2016
  * changed to update stateChangeTime properly

* 12/1/2016
  * removed retry for analysis in Watcher

* 11/25/2016
  * added pilot_killed

* 11/24/2016
  * Updated MySQL DB schema

* 11/18/2016
  * added task_id and account to prestaging rules

* 11/14/2016
  * made timeout value for analysis rebrokerage configurable
  * added maxWalltime to getJob response

* 11/11/2016
  * removed dependencies on se, seprodpath, setokens in schedconfig

* 11/10/2016
  * added recoverLostFiles

* 11/2/2016
  * added es_heartbeat and es_merge_failed

* 10/31/2016
  * disabled ES file registration
  * fixed del flag for failed ES merge jobs

* 10/28/2016
  * fixed localEsMergeNC

* 10/27/2016
  * changed rebro to kill starting jobs
  * changed starting jobs not to update modification time

* 10/20/2016
  * reduced timeout for activated user jobs to 6h from 24h

* 10/18/2016
  * jedi_events.error_code
  * jobsubstatus=pilot_finished

* 10/17/2016
  * allowing cancelled jobs to register log files

* 10/15/2016
  * eventStatus=fatal

* 9/20/2016
  * checking sutck merging jobs

* 9/16/2016
  * setting DEL flag to event ranges

* 9/15/2016
  * added tier to SiteSpec

* 9/12/2016
  * added multi zip support for ES

* 9/7/2016
  * using soft erase for dis and sub
  * adding all production sites to WORLD by default

* 8/29/2016